--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "pg": "^8.16.0",
+    "pg-hstore": "^2.3.4",
     "rxjs": "~7.8.0",
+    "sequelize": "^6.37.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
