--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "rxjs": "~7.8.0",
