--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/compiler-cli": "^20.0.0",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
